--- a/produccion/less/bp1.less
+++ b/produccion/less/bp1.less
@@ -1,133 +1,17 @@
 // Break point 1
 
-
-article {
+figure .terminal {
+	margin: 35px 10px 70px 10px;
+}
+	figure .terminal .nota {
+		bottom: -50px;
+		left: 10px;
+	}	
+section#home article {
 	background: white;
-	padding: 0 20px 10px 20px;
-	 h1 {
-		color: @tituloarticle;
-		font-family: @tituloarticulo;
-		font-size: 2.5em;
-		letter-spacing: -4px;
+	padding: 0 10px 10px 10px;
+}
+	section#home article h1 {
 		text-align: center;
-		padding: 52px 0 25px 0;
+		padding: 45px 0 10px 0;
 	}
-	h2 {
-		border-bottom: 1px solid @colorborde;
-		color: @subtituloarticle;
-		font-family: @mainfont;
-		font-size: 1.4em;
-		margin-bottom: 5px;
-		padding: 30px 0 10px 0;
-		span {
-			color: @subtituloarticle2;
-			font-weight: bold;
-		}
-	}
-	p {
-		color: @colorprincipal;
-		font-size: .9em;
-		margin-bottom: 15px;
-		line-height: 1.6;
-	}
-
-	ul {
-		padding: 10px 0 20px 20px;
-		line-height: 2.2em;
-		font-size: .9em;
-		li {
-			list-style-type: circle;
-		}
-	}
-}
-
-#logo {
-	text-align: center;
-}
-#logo h1 {
-	font-size: 3em;
-}
-#logo img {
-	display: block;
-	margin: 10px auto 0 auto;
-	height: auto;
-	padding: 10px 0 3px 0;
-	width: 60px;
-}
-#mm0 {
-	background: @colorprincipal;
-	border: 1px solid @colorprincipal;
-	color: @colorfondo;
-	font-size: 18px;
-	height: 38px;
-	left: -4px;
-	opacity: .95;
-	position: relative;
-	width: 107%;
-}
-.fixed {
-    position: fixed;
-    top: -20px;
-    left: 0px;
-   	width: 109%;
-}
-.menu {
-	padding: 20px 0 0 0;
-	overflow: hidden;
-	z-index: 5;
-}
-.terminal {
-	background: rgba(0,0,0,.65);
-	border-radius: 0 0 4px 4px;
-	-webkit-box-shadow: 0px 1px 2px rgba(111,129,148,.7);
-	margin: 35px 35px 70px 35px;
-	position: relative;
-	#maquina pre {
-		color: @textoterminal;
-		line-height: 1.5;
-		padding: 35px 15px 0 20px;
-	}
-}
-.barra {
-	background: lightgrey;
-	border-radius: 6px 6px 0 0;
-	position: absolute;
-	width: 100%;
-	top: -10px;
-	#barra {
-		font-size: .8em;
-		line-height: 2;
-		text-align: center;
-
-	}
-}
-.nota {
-	position: relative;
-	bottom: -35px;
-	color: grey;
-	left: 10px;
-	font-size: .9em;
-	span {
-		font-weight: bold;
-		color: rgba(0,0,0,.8);
-	}
-}
-.boton_google {
-	display: inline-block;
-	position: absolute;
-	left: 5%;
-	top: 35%;
-}
-.boton_twitter {
-	display: inline-block;
-	position: absolute;
-	left: 20%;
-	top: 35%;
-}
-.social {
-	background: rgba(237,241,243,.5);
-	border-top: 1px solid @colorborde;
-	margin-top: 30px;
-	padding: 35px;
-	position: relative;
-}
