--- a/produccion/less/bp1.less
+++ b/produccion/less/bp1.less
@@ -1,12 +1,21 @@
 // Break point 1
 
 figure .terminal {
-	margin: 35px 10px 70px 10px;
+	margin: 20px 10px 150px 10px;
 }
 	figure .terminal .nota {
-		bottom: -50px;
+		bottom: -135px;
 		left: 10px;
 	}	
+		figure .terminal .nota .color_tipear {
+		width: 100%;
+	}	
+	figure .terminal .nota .color_maquina {
+		width: 100%;
+	}
+	figure .terminal .nota .color_copiar {
+		width: 100%;
+	}
 section#home article {
 	background: white;
 	padding: 0 10px 10px 10px;
