--- a/produccion/less/variables.less
+++ b/produccion/less/variables.less
@@ -27,7 +27,12 @@
 @colorprincipal: rgb(111,129,148);
 
 // Texto terminal
-@textoterminal: rgb(153,187,103);
+@textoterminal: #66bb67;
+@textoterminaltipear: #3efc30;
+
+// Color ventana terminal
+@ventanaterminal: rgba(0,0,0,.65);
+@ventanaterminalcopiar: rgba(0,0,0,.8);
 
 // Fuentes =========================================
 @mainfont: 'Raleway', sans-serif;
