--- a/produccion/less/bp3.less
+++ b/produccion/less/bp3.less
@@ -113,10 +113,10 @@ section#home {
 			}
 
 figure .terminal {
-	background: rgba(0,0,0,.65);
+	background: @ventanaterminal;
 	border-radius: 0 0 4px 4px;
 	-webkit-box-shadow: 0px 1px 1px rgba(111,129,148,.5);
-	margin: 35px 35px 70px 35px;
+	margin: 20px 35px 70px 35px;
 	position: relative;
 }
 	figure .terminal #maquina pre {
@@ -124,6 +124,15 @@ figure .terminal {
 		line-height: 1.5;
 		padding: 35px 15px 0 20px;
 	}
+		figure .terminal #maquina pre .tipear {
+			color: @textoterminaltipear;
+		}
+		figure .terminal #maquina pre .copiar {
+			background: @ventanaterminalcopiar;
+			border-radius: 10px;
+			padding: 0 5px;
+			color: @textoterminal;
+		}
 	figure .terminal .barra {
 		background: lightgrey;
 		border-radius: 6px 6px 0 0;
@@ -139,15 +148,50 @@ figure .terminal {
 		}
 	figure .terminal .nota {
 		position: relative;
-		bottom: -35px;
+		bottom: -55px;
 		color: grey;
-		left: 10px;
+		left: 20px;
 		font-size: .9em;
 	}	
-		figure .terminal .nota span {
-			font-weight: bold;
-			// color: rgba(0,0,0,.8);
+		figure .terminal .nota .color_tipear {
+			display: inline-block;
+			width: 30%;
 		}	
+			figure .terminal .nota .color_tipear span {
+				background: @ventanaterminal;
+				border-radius: 15px;
+				color: @textoterminaltipear;
+				height: 20px;
+				margin-right: 5px;
+				padding: 5px 10px 5px 10px;
+				width: auto;
+			}
+		figure .terminal .nota .color_maquina {
+			display: inline-block;
+			width: 30%;
+		}
+			figure .terminal .nota .color_maquina span {
+				background: @ventanaterminal;
+				border-radius: 15px;
+				color: @textoterminal;
+				height: 20px;
+				margin-right: 5px;
+				padding: 5px 10px 5px 10px;
+				width: auto;
+			}
+		figure .terminal .nota .color_copiar {
+			display: inline-block;
+			width: 30%;
+		}
+			figure .terminal .nota .color_copiar span {
+				background: @ventanaterminalcopiar;
+				border-radius: 15px;
+				color: @textoterminal;
+				height: 20px;
+				margin-right: 5px;
+				padding: 5px 10px 5px 10px;
+				width: auto;
+			}
 .boton_google {
 	display: inline-block;
 	position: absolute;
