--- a/produccion/css/estilos.css
+++ b/produccion/css/estilos.css
@@ -133,36 +133,68 @@ h2 {
   }
   header nav ul {
     overflow-y: scroll;
-    height: 58%;
+    height: 55%;
     position: absolute;
+    top: 290px;
     left: 15px;
     right: 15px;
   }
   header nav ul li {
     border-bottom: 1px solid #c6cfd3;
     line-height: 1.1;
-    padding: 13px 0 13px 10px;
+    padding: 12px 5px 8px 10px;
   }
   header nav ul li:hover {
     background: rgba(0, 0, 0, 0.03);
     -webkit-transition: all .2s ease;
     transition: all .2s ease;
   }
-  header nav ul li#titulo {
-    background: #909cac;
-    color: #edf1f3;
-  }
-  header nav ul li#titulo:hover {
-    background: #909cac;
-    color: #edf1f3;
-  }
   header nav ul li a {
     color: #6f8194;
     font-size: .95em;
     font-weight: normal;
+    display: block;
+    padding: 12px 0 0 0;
   }
   header nav ul li a:hover {
+    color: #6f8194;
     text-decoration: none;
+  }
+  header nav ul li#uno {
+    background: #909cac;
+    color: #edf1f3;
+    padding: 12px 5px 12px 10px;
+  }
+  header nav ul li#dos {
+    background: rgba(144, 156, 172, 0.8);
+    color: #edf1f3;
+    padding: 12px 5px 12px 10px;
+  }
+  header nav ul li#tres {
+    background: rgba(144, 156, 172, 0.6);
+    color: #edf1f3;
+    padding: 12px 5px 12px 10px;
+  }
+  header nav ul li#cuatro {
+    background: rgba(144, 156, 172, 0.4);
+    color: white;
+    padding: 12px 5px 12px 10px;
+  }
+  header nav ul li#cinco {
+    background: rgba(144, 156, 172, 0.3);
+    border-radius: 3px;
+    color: white;
+    padding: 12px 5px 12px 10px;
+  }
+  header nav ul li#fuentes,
+  #contacto {
+    background: #909cac;
+    color: #edf1f3;
+  }
+  header nav ul li#contacto a,
+  #fuentes a {
+    color: #edf1f3;
+    font-size: 1em;
   }
   section#home {
     float: left;
@@ -227,9 +259,9 @@ h2 {
     color: #3efc30;
   }
   figure .terminal #maquina pre .copiar {
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.3);
     border-radius: 10px;
-    padding: 0 5px;
+    padding: 2px 5px;
     color: #66bb67;
   }
   figure .terminal .barra {
@@ -257,7 +289,7 @@ h2 {
     width: 30%;
   }
   figure .terminal .nota .color_tipear span {
-    background: rgba(0, 0, 0, 0.65);
+    background: rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     color: #3efc30;
     height: 20px;
@@ -270,7 +302,7 @@ h2 {
     width: 30%;
   }
   figure .terminal .nota .color_maquina span {
-    background: rgba(0, 0, 0, 0.65);
+    background: rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     color: #66bb67;
     height: 20px;
@@ -283,7 +315,7 @@ h2 {
     width: 30%;
   }
   figure .terminal .nota .color_copiar span {
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.7);
     border-radius: 15px;
     color: #66bb67;
     height: 20px;
@@ -348,9 +380,9 @@ h2 {
     color: #3efc30;
   }
   figure .terminal #maquina pre .copiar {
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.3);
     border-radius: 10px;
-    padding: 0 5px;
+    padding: 2px 5px;
     color: #66bb67;
   }
   figure .terminal .barra {
@@ -378,7 +410,7 @@ h2 {
     width: 30%;
   }
   figure .terminal .nota .color_tipear span {
-    background: rgba(0, 0, 0, 0.65);
+    background: rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     color: #3efc30;
     height: 20px;
@@ -391,7 +423,7 @@ h2 {
     width: 30%;
   }
   figure .terminal .nota .color_maquina span {
-    background: rgba(0, 0, 0, 0.65);
+    background: rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     color: #66bb67;
     height: 20px;
@@ -404,7 +436,7 @@ h2 {
     width: 30%;
   }
   figure .terminal .nota .color_copiar span {
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.7);
     border-radius: 15px;
     color: #66bb67;
     height: 20px;
