--- a/produccion/less/bp2.less
+++ b/produccion/less/bp2.less
@@ -30,7 +30,7 @@ figure#logo img {
 		figure .terminal #maquina pre .copiar {
 			background: @ventanaterminalcopiar;
 			border-radius: 10px;
-			padding: 0 5px;
+			padding: 2px 5px;
 			color: @textoterminal;
 		}
 	figure .terminal .barra {
@@ -58,7 +58,7 @@ figure#logo img {
 			width: 30%;
 		}	
 			figure .terminal .nota .color_tipear span {
-				background: @ventanaterminal;
+				background: rgba(0,0,0,.5);
 				border-radius: 15px;
 				color: @textoterminaltipear;
 				height: 20px;
@@ -71,7 +71,7 @@ figure#logo img {
 			width: 30%;
 		}
 			figure .terminal .nota .color_maquina span {
-				background: @ventanaterminal;
+				background: rgba(0,0,0,.5);
 				border-radius: 15px;
 				color: @textoterminal;
 				height: 20px;
@@ -84,7 +84,7 @@ figure#logo img {
 			width: 30%;
 		}
 			figure .terminal .nota .color_copiar span {
-				background: @ventanaterminalcopiar;
+				background: rgba(0,0,0,.7);
 				border-radius: 15px;
 				color: @textoterminal;
 				height: 20px;
