--- a/produccion/less/bp3.less
+++ b/produccion/less/bp3.less
@@ -60,30 +60,9 @@ header {
 				color: @menutexto;
 				text-decoration: none;
 			}
-		header nav ul li#uno {
-			background: rgba(144,156,172,1);
-			color: @colorfondo;
-			padding: 12px 5px 12px 10px;
-		}
-		header nav ul li#dos {
+		header nav ul li#titulo {
 			background: rgba(144,156,172,.8);
 			color: @colorfondo;
-			padding: 12px 5px 12px 10px;
-		}
-		header nav ul li#tres {
-			background: rgba(144,156,172,.6);
-			color: @colorfondo;
-			padding: 12px 5px 12px 10px;
-		}
-		header nav ul li#cuatro {
-			background: rgba(144,156,172,.4);
-			color: white;
-			padding: 12px 5px 12px 10px;
-		}
-		header nav ul li#cinco {
-			background: rgba(144,156,172,.3);
-			border-radius: 3px;
-			color: white;
 			padding: 12px 5px 12px 10px;
 		}
 		header nav ul li#fuentes, #contacto {
