BORRADO TOTAL i empezando de nuevo
Estructura básica HTML i LESS

--- a/less/layout.less
+++ b/less/layout.less
@@ -1,20 +1,10 @@
-/* Layout */
+// Layout
 
-body {
-	background: @colorfondo;
-	color: @colorprincipal;
-	font-family: @mainfont;
-	font-size: 16px;
-	line-height: 1.9;
-}
-#logo h1,h2 {
-	font-family: @tituloprincipal;
-}
+// Selecciçión
 ::selection {
 	background: orange;
 	color: white;
 }
-
 // Break points
 @media screen and (min-width: 992px) {
 	@import "bp3.less";
