--- a/less/variables.less
+++ b/less/variables.less
@@ -1,12 +1,12 @@
 // Variables
 
-// Tipografias =====================================
-@mainfont: 'pt sans', sans-serif;
-@titulofont: 'Quicksand', sans-serif;
-
-// Break points ====================================
+// Fuentes =========================================
+@mainfont: 'Raleway', sans-serif;
+@tituloprincipal: 'lobster', cursive; 
+@tituloarticulo: 'Quicksand', cursive; 
 
 // Colores =========================================
+
 // Color fondo
 @colorfondo: rgb(237,241,243);
 // Color borde
@@ -23,6 +23,7 @@
 @subtituloarticle: rgb(83,92,100);
 // Subtitulo article
 @subtituloarticle2: rgba(0,0,0,.75);
+// 
 // Texto article
 @colorprincipal: rgb(111,129,148);
 
@@ -33,8 +34,3 @@
 // Color ventana terminal
 @ventanaterminal: rgba(0,0,0,.65);
 @ventanaterminalcopiar: rgba(0,0,0,.3);
-
-// Fuentes =========================================
-@mainfont: 'Raleway', sans-serif;
-@tituloprincipal: 'lobster', cursive; 
-@tituloarticulo: 'Quicksand', cursive; 
