Varios avances de marcado y estilado

--- a/less/bp3.less
+++ b/less/bp3.less
@@ -1,1 +1,52 @@
 // Vista escritorio
+
+
+
+
+header#header {
+	border:2px solid blue;	
+	width: 25%;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	bottom: 0px;
+}
+	header#header div#titulo_principal {
+		
+	}
+	header#header nav#menu {
+		border:2px solid orange;
+	}
+	header#header figure#logo {
+		border:2px solid green;
+	}
+section#wrapper {
+	border:2px solid red;
+}
+section#contenido {
+	border:2px solid yellow;
+	float: left;
+	max-width: 1000px;
+	margin-left: 25%;
+}
+	section#contenido article {
+		border:2px solid brown;
+		background: white;
+		border-radius: 7px;
+		border: 1px solid @colorborde;
+		margin: @margenE;
+		padding: @margenI;
+	}
+	section#contenido article header.titulo {
+		border:2px solid blue;
+	}
+	section#contenido article div.contenido {
+		border:2px solid pink;
+	}
+	section#contenido article footer.social {
+		border:2px solid orange;
+	}
+footer#footer {
+	border:2px solid purple;
+}
+
