--- a/less/variables.less
+++ b/less/variables.less
@@ -34,3 +34,11 @@
 // Color ventana terminal
 @ventanaterminal: rgba(0,0,0,.65);
 @ventanaterminalcopiar: rgba(0,0,0,.3);
+
+// Márgenes =========================================
+
+// Margen externo
+@margenE: 15px;
+
+// Margen interno
+@margenI: 20px;
