--- a/less/layout.less
+++ b/less/layout.less
@@ -1,5 +1,14 @@
 // Layout
 
+body {
+	background: @colorfondo;
+	color: @colorprincipal;
+	font-family: @mainfont;
+	font-size: 16px;
+}
+header#header h1, h2 {
+	font-family: @tituloprincipal;
+}
 // Selecciçión
 ::selection {
 	background: orange;
