--- a/style.css
+++ b/style.css
@@ -1,131 +1,149 @@
-@font-face {
-  font-family: 'icomoon';
-  src: url('fonts/icomoon.eot');
-  src: url('fonts/icomoon.eot?#iefix') format('embedded-opentype'), url('fonts/icomoon.ttf') format('truetype'), url('fonts/icomoon.woff') format('woff'), url('fonts/icomoon.svg#icomoon') format('svg');
-  font-weight: normal;
-  font-style: normal;
+html,
+body,
+body div,
+span,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+abbr,
+address,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+samp,
+small,
+strong,
+sub,
+sup,
+var,
+b,
+i,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+figure,
+footer,
+header,
+hgroup,
+menu,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
-[class*="icon-"] {
-  font-family: 'icomoon';
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  /* Better Font Rendering =========== */
-
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace, serif;
+  font-size: 1em;
 }
-.icon-paperplane:before {
-  content: "\e600";
+pre {
+  white-space: pre-wrap;
 }
-.icon-book:before {
-  content: "\e60b";
-}
-.icon-box:before {
-  content: "\e60e";
-}
-.icon-arrow-up:before {
-  content: "\e610";
-}
-.icon-github:before {
-  content: "\e601";
-}
-.icon-signup:before {
-  content: "\e603";
-}
-.icon-link:before {
-  content: "\e604";
-}
-.icon-earth:before {
-  content: "\e605";
-}
-.icon-twitter:before {
-  content: "\e606";
-}
-.icon-books:before {
-  content: "\e607";
-}
-.icon-spell-check:before {
-  content: "\e611";
-}
-.icon-bubbles:before {
-  content: "\e60f";
-}
-.icon-video:before {
-  content: "\e609";
-}
-.icon-mail:before {
-  content: "\e60a";
-}
-.icon-paperplane:before {
-  content: "\e608";
-}
-.icon-world:before {
-  content: "\e60d";
+a {
+  text-decoration: none;
 }
 body {
-  background: rgba(0, 0, 0, 0.8);
+  background: #edf1f3;
+  color: #6f8194;
+  font-family: 'Raleway', sans-serif;
+  font-size: 16px;
 }
-footer #avatar {
-  position: relative;
+header#header h1,
+h2 {
+  font-family: 'lobster', cursive;
 }
-footer #avatar img {
-  width: 60px;
-  height: auto;
-  border-radius: 40px;
-  border: 3px solid white;
-}
-footer #avatar p#nombre {
-  font-weight: bold;
-  font-size: 1.2em;
+::selection {
+  background: orange;
   color: white;
-  position: absolute;
-  top: -5px;
-  left: 90px;
 }
-footer #avatar p#twitter {
-  position: absolute;
-  font-size: 1.2em;
-  color: white;
-  top: 13px;
-  left: 90px;
+@media screen and (min-width: 992px) {
+  header#header {
+    border: 2px solid blue;
+    width: 25%;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+  }
+  header#header nav#menu {
+    border: 2px solid orange;
+  }
+  header#header figure#logo {
+    border: 2px solid green;
+  }
+  section#wrapper {
+    border: 2px solid red;
+  }
+  section#contenido {
+    border: 2px solid yellow;
+    float: left;
+    max-width: 1000px;
+    margin-left: 25%;
+  }
+  section#contenido article {
+    border: 2px solid brown;
+    background: white;
+    border-radius: 7px;
+    border: 1px solid #c6cfd3;
+    margin: 15px;
+    padding: 20px;
+  }
+  section#contenido article header.titulo {
+    border: 2px solid blue;
+  }
+  section#contenido article div.contenido {
+    border: 2px solid pink;
+  }
+  section#contenido article footer.social {
+    border: 2px solid orange;
+  }
+  footer#footer {
+    border: 2px solid purple;
+  }
 }
-footer .icon-mail {
-  background: #0d65f0;
-  width: 60px;
-  height: 60px;
-  border-radius: 30px;
-  position: absolute;
-  top: 150px;
-  color: white;
-  font-size: 1.8em;
-  text-align: center;
-  line-height: 2.15;
+@media screen and (max-width: 992px) {
+  
 }
-footer .icon-mail:before {
-  content: "\e60a";
-  font-family: 'icomoon';
-}
-.icon-mail:before {
-  content: "\e60a";
-}
-footer .icon-github {
-  background: #8f8f8f;
-  border-radius: 30px;
-  color: white;
-  font-size: 2.2em;
-  text-align: center;
-  line-height: 1.7;
-  height: 60px;
-  left: 135px;
-  position: absolute;
-  top: 150px;
-  width: 60px;
-}
-footer.icon-github:before {
-  content: "\e601";
-  font-family: 'icomoon';
+@media screen and (max-width: 480px) {
+  
 }
