--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ h2 {
 @media screen and (min-width: 992px) {
   header#header {
     border: 2px solid blue;
-    width: 310px;
+    width: 325px;
     position: fixed;
     top: 0px;
     left: 0px;
@@ -118,7 +118,7 @@ h2 {
     border: 2px solid yellow;
     float: left;
     max-width: 1000px;
-    margin-left: 310px;
+    margin-left: 325px;
     display: inline-block;
   }
   section#contenido article {
@@ -140,19 +140,53 @@ h2 {
   }
   footer#footer {
     border: 2px solid purple;
-    bottom: 0px;
-    margin-left: 310px;
-    position: relative;
-    width: 100%;
-    max-width: 1000px;
-    height: 250px;
     display: inline-block;
+    height: 200px;
+    margin-left: 325px;
+    max-width: 1000px;
+    width: 100%;
+  }
+  footer#footer #avatar {
+    border: 2px solid;
+    display: inline-block;
+    width: 33%;
   }
   footer#footer #avatar figure img {
-    width: 80px;
-    height: auto;
-    border-radius: 80px;
+    border-radius: 70px;
     border: 3px solid white;
+    height: auto;
+    width: 70px;
+  }
+  footer#footer #avatar p#nombre {
+    color: #6f8194;
+    font-size: 1.2em;
+    font-weight: bold;
+  }
+  footer#footer #avatar p#twitter {
+    color: #6f8194;
+    font-size: 1.2em;
+  }
+  footer#footer #emial {
+    display: inline-block;
+    border: 2px solid;
+    width: 33%;
+  }
+  footer#footer .icon-mail {
+    background: #0d65f0;
+    border-radius: 40px;
+    height: 70px;
+    width: 70px;
+  }
+  footer#footer #github {
+    display: inline-block;
+    border: 2px solid;
+    width: 33%;
+  }
+  footer#footer #github .icon-github {
+    background: #8f8f8f;
+    border-radius: 40px;
+    height: 70px;
+    width: 70px;
   }
 }
 @media screen and (max-width: 992px) {
