--- a/less/bp3.less
+++ b/less/bp3.less
@@ -1,7 +1,7 @@
 // Vista escritorio
 
 header#header {
-	border:2px solid blue;	
+	// border:2px solid blue;	
 	width: 325px;
 	position: fixed;
 	top: 0px;
@@ -18,10 +18,10 @@ header#header {
 		border:2px solid green;
 	}
 section#wrapper {
-	border:2px solid red;
+	// border:2px solid red;
 }
 section#contenido {
-	border:2px solid yellow;
+	// border:2px solid yellow;
 	float: left;
 	max-width: 1000px;
 	margin-left: 325px;
@@ -45,52 +45,94 @@ section#contenido {
 		border:2px solid orange;
 	}
 footer#footer {
-	border:2px solid purple;
 	display: inline-block;
 	height: 200px;
 	margin-left: 325px;
 	max-width: 1000px;
 	width: 100%;
+	position: relative;
 }
 	footer#footer #avatar {
-		border: 2px solid;
-		display: inline-block;
+		// border: 2px solid;
 		width: 33%;
 	}
 		footer#footer #avatar figure img{
 			border-radius: 70px;
-			border: 3px solid white;
+			border: 3px solid @colorprincipal;
 			height: auto;
 			width: 70px;
+			position: absolute;
+			top: 60px;
+			left: 270px;
 		}
 		footer#footer #avatar p#nombre {
 			color: @colorprincipal;											
 			font-size: 1.2em;
 			font-weight: bold;
+			position: absolute;
+			top: 70px;
+			left: 370px;
 		}
 		footer#footer #avatar p#twitter {
 			color: @colorprincipal;											
 			font-size: 1.2em;
+			position: absolute;
+			top: 90px;
+			left: 370px;
 		}
 	footer#footer #emial {
-		display: inline-block;
-		border: 2px solid;
+		// border: 2px solid;
 		width: 33%;
+		position: absolute;
+		top: 60px;
+		left: 70px;
 	} 
-		footer#footer .icon-mail {
+		footer#footer #emial .icon-mail {
 		background: #0d65f0;
 		border-radius: 40px;
 		height: 70px;
-		width: 70px
+		width: 70px;
+		color: @colorfondo;
+		text-align: center;
+		line-height: 1.85;
+		font-size: 2.3em;
+		}
+		footer#footer #emial .icon-mail:before {
+			content: "\e602";
+			font-family: 'icomoon';
+		}
+		footer#footer #emial .icon-mail:hover {
+			background: @colorhover;
+			-webkit-transition: all .2s ease;
+			transition: all .2s ease;
 		}
 	footer#footer #github {
-		display: inline-block;
-		border: 2px solid;
+		// border: 2px solid;
 		width: 33%;
+		position: absolute;
+		top: 60px;
+		left: 170px;
 	} 
 		footer#footer #github .icon-github {
-			background: #8f8f8f;
+			background: @colorprincipal;
 			border-radius: 40px;
 			height: 70px;
-			width: 70px
+			width: 70px;
+			color: @colorfondo;
+			text-align: center;
+			line-height: 1.75;
+			font-size: 2.5em;
 		}
+		footer#footer #github .icon-github:before {
+			content: "\e601";
+			font-family: 'icomoon';
+		}
+		footer#footer #github .icon-github:hover {
+			background: @colorhover;
+			-webkit-transition: all .2s ease;
+			transition: all .2s ease;
+		}
+
+
+
+// Avatar giratorio
