--- a/less/font-face.less
+++ b/less/font-face.less
@@ -1,1 +1,63 @@
 // Font-face
+
+@font-face {
+	font-family: 'icomoon';
+	src:url('fonts/icomoon.eot');
+	src:url('fonts/icomoon.eot?#iefix') format('embedded-opentype'),
+		url('fonts/icomoon.ttf') format('truetype'),
+		url('fonts/icomoon.woff') format('woff'),
+		url('fonts/icomoon.svg#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+[class*="icon-"] {
+	font-family: 'icomoon';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-github:before {
+	content: "\e601";
+}
+.icon-link:before {
+	content: "\e604";
+}
+.icon-twitter:before {
+	content: "\e606";
+}
+.icon-books:before {
+	content: "\e607";
+}
+.icon-bubble:before {
+	content: "\e614";
+}
+.icon-play:before {
+	content: "\e600";
+}
+.icon-book:before {
+	content: "\e60b";
+}
+.icon-arrow-up:before {
+	content: "\e610";
+}
+.icon-mail:before {
+	content: "\e602";
+}
+.icon-graduation:before {
+	content: "\e611";
+}
+.icon-network:before {
+	content: "\e612";
+}
+.icon-uniE613:before {
+	content: "\e613";
+}
