--- a/less/variables.less
+++ b/less/variables.less
@@ -11,6 +11,8 @@
 @colorfondo: rgb(237,241,243);
 // Color borde
 @colorborde: #c6cfd3;
+// Color hover
+@colorhover: rgba(0,0,0,.7);
 
 // Menu titulo
 @menutitulo: rgb(144,156,172);
