--- a/style.css
+++ b/style.css
@@ -224,6 +224,11 @@ h2 {
     top: 90px;
     left: 370px;
   }
+  footer#footer #logo_giratorio {
+    position: absolute;
+    top: 60px;
+    left: 270px;
+  }
   footer#footer #emial {
     width: 33%;
     position: absolute;
@@ -273,6 +278,64 @@ h2 {
     background: rgba(0, 0, 0, 0.7);
     -webkit-transition: all .2s ease;
     transition: all .2s ease;
+  }
+  .avatar {
+    border-radius: 50%;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  .fContainer {
+    perspective: 1000;
+    position: relative;
+    width: 70px;
+    height: 70px;
+    z-index: 1;
+  }
+  .fContainer .fPanel {
+    width: 100%;
+    height: 100%;
+    -webkit-transform-style: preserve-3d;
+    -webkit-transition: all .6s linear;
+    -moz-transform-style: preserve-3d;
+    -moz-transition: all .6s linear;
+    -o-transform-style: preserve-3d;
+    -o-transition: all .6s linear;
+    transform-style: preserve-3d;
+    transition: all .6s linear;
+  }
+  .fContainer:hover .fPanel {
+    -webkit-transform: rotateY(180deg);
+    -webkit-box-sizing: border-box;
+    -moz-transform: rotateY(180deg);
+    -moz-box-sizing: border-box;
+    -o-transform: rotateY(180deg);
+    -o-box-sizing: border-box;
+    transform: rotateY(180deg);
+  }
+  .fContainer .back {
+    display: block;
+    font-size: 2.2em;
+    -webkit-transform: rotateY(180deg);
+    -webkit-box-sizing: border-box;
+    -moz-transform: rotateY(180deg);
+    -moz-box-sizing: border-box;
+    -o-transform: rotateY(180deg);
+    -o-box-sizing: border-box;
+    transform: rotateY(180deg);
+    box-sizing: border-box;
+    padding: 10px;
+    color: white;
+    text-align: center;
+    background-color: #6f8194;
+  }
+  .back .icon-twitter {
+    color: #edf1f3;
+    line-height: 1.5;
   }
 }
 @media screen and (max-width: 992px) {
