--- a/less/bp3.less
+++ b/less/bp3.less
@@ -7,16 +7,35 @@ header#header {
 	top: 0px;
 	left: 0px;
 	bottom: 0px;
+	margin: 10px;
 }
 	header#header div#titulo_principal {
-		
+		// border: 2px solid green;
+		text-align: center;
+		margin: 0 auto @margenE auto;
 	}
+		header#header div#titulo_principal h1 {
+			font-size: 3.6em;
+		}
+		header#header div#titulo_principal h2 {
+			border-top: 1px solid @colorborde;
+			font-size: 1.2em;
+			line-height: 25px;
+			margin-top: 5px;
+		}
 	header#header nav#menu {
 		border:2px solid orange;
+		margin: 25px 7px 25px 7px ;
 	}
 	header#header figure#logo {
-		border:2px solid green;
+		// border:2px solid green;
+		text-align: center;
 	}
+		header#header figure#logo img {
+			width: 120px;
+			height: auto;
+			margin:  20px auto 10px auto;
+		}
 section#wrapper {
 	// border:2px solid red;
 }
@@ -24,7 +43,7 @@ section#contenido {
 	// border:2px solid yellow;
 	float: left;
 	max-width: 1000px;
-	margin-left: 325px;
+	margin-left: 335px;
 	display: inline-block;
 }
 	section#contenido article {
@@ -47,7 +66,7 @@ section#contenido {
 footer#footer {
 	display: inline-block;
 	height: 200px;
-	margin-left: 325px;
+	margin-left: 335px;
 	max-width: 1000px;
 	width: 100%;
 	position: relative;
@@ -139,71 +158,3 @@ footer#footer {
 		}
 
 
-
-// Avatar giratorio
-
-.rotateY() {
-  -webkit-transform: rotateY(180deg);
-  -webkit-box-sizing: border-box;
-  -moz-transform: rotateY(180deg);
-  -moz-box-sizing: border-box;
-  -o-transform: rotateY(180deg);
-  -o-box-sizing: border-box;
-  transform: rotateY(180deg);
-}
-
-.hiddenBackface() {
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -o-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-
-.avatar {
-  border-radius: 50%;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  .hiddenBackface();
-}
-
-.fContainer {
-  perspective: 1000;
-  position: relative;
-  width: 70px; height: 70px;
-  z-index: 1;
-  
-  .fPanel {
-    width: 100%;
-    height: 100%;
-    -webkit-transform-style: preserve-3d;
-    -webkit-transition: all .6s linear;
-    -moz-transform-style: preserve-3d;
-    -moz-transition: all .6s linear;
-    -o-transform-style: preserve-3d;
-    -o-transition: all .6s linear;
-    transform-style: preserve-3d;
-    transition: all .6s linear;
-  }
-  
-  &:hover {
-    .fPanel {
-      .rotateY();
-    }
-  }
-  
-  .back {
-    display: block;
-    font-size: 2.2em;
-    .rotateY();    
-    box-sizing: border-box;
-    padding: 10px;
-    color: white;
-    text-align: center;
-    background-color: @colorprincipal;
-  }
-}
-.back .icon-twitter {
-	color: @colorfondo;
-	line-height: 1.5;
-}
