--- a/style.css
+++ b/style.css
@@ -217,17 +217,37 @@ h2 {
     top: 0px;
     left: 0px;
     bottom: 0px;
+    margin: 10px;
+  }
+  header#header div#titulo_principal {
+    text-align: center;
+    margin: 0 auto 15px auto;
+  }
+  header#header div#titulo_principal h1 {
+    font-size: 3.6em;
+  }
+  header#header div#titulo_principal h2 {
+    border-top: 1px solid #c6cfd3;
+    font-size: 1.2em;
+    line-height: 25px;
+    margin-top: 5px;
   }
   header#header nav#menu {
     border: 2px solid orange;
+    margin: 25px 7px 25px 7px ;
   }
   header#header figure#logo {
-    border: 2px solid green;
+    text-align: center;
+  }
+  header#header figure#logo img {
+    width: 120px;
+    height: auto;
+    margin: 20px auto 10px auto;
   }
   section#contenido {
     float: left;
     max-width: 1000px;
-    margin-left: 325px;
+    margin-left: 335px;
     display: inline-block;
   }
   section#contenido article {
@@ -250,7 +270,7 @@ h2 {
   footer#footer {
     display: inline-block;
     height: 200px;
-    margin-left: 325px;
+    margin-left: 335px;
     max-width: 1000px;
     width: 100%;
     position: relative;
@@ -336,64 +356,6 @@ h2 {
     background: rgba(0, 0, 0, 0.7);
     -webkit-transition: all .2s ease;
     transition: all .2s ease;
-  }
-  .avatar {
-    border-radius: 50%;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -o-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-  .fContainer {
-    perspective: 1000;
-    position: relative;
-    width: 70px;
-    height: 70px;
-    z-index: 1;
-  }
-  .fContainer .fPanel {
-    width: 100%;
-    height: 100%;
-    -webkit-transform-style: preserve-3d;
-    -webkit-transition: all .6s linear;
-    -moz-transform-style: preserve-3d;
-    -moz-transition: all .6s linear;
-    -o-transform-style: preserve-3d;
-    -o-transition: all .6s linear;
-    transform-style: preserve-3d;
-    transition: all .6s linear;
-  }
-  .fContainer:hover .fPanel {
-    -webkit-transform: rotateY(180deg);
-    -webkit-box-sizing: border-box;
-    -moz-transform: rotateY(180deg);
-    -moz-box-sizing: border-box;
-    -o-transform: rotateY(180deg);
-    -o-box-sizing: border-box;
-    transform: rotateY(180deg);
-  }
-  .fContainer .back {
-    display: block;
-    font-size: 2.2em;
-    -webkit-transform: rotateY(180deg);
-    -webkit-box-sizing: border-box;
-    -moz-transform: rotateY(180deg);
-    -moz-box-sizing: border-box;
-    -o-transform: rotateY(180deg);
-    -o-box-sizing: border-box;
-    transform: rotateY(180deg);
-    box-sizing: border-box;
-    padding: 10px;
-    color: white;
-    text-align: center;
-    background-color: #6f8194;
-  }
-  .back .icon-twitter {
-    color: #edf1f3;
-    line-height: 1.5;
   }
 }
 @media screen and (max-width: 992px) {
